# self_encryption_ui

./: .gitignore  Cargo.toml  convert.py  readme.md
html/: index.html
html/css/: app.css
html/js/: app.js  chunk.js  convert.js  wasm_helpers.js
src/: lib.rs
