[package]
name = "self_encryption_wasm_bridge"
version = "0.0.1"
authors = ["Ian Coleman"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "~0.1.30"
futures = "0.3.14"
sn_url = "1.1.2"
self_encryption = "0.23.0"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
wasm-bindgen = "0.2.63"
xor_name = "1.2.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
